Fix for plugins not being able to get handle to doc's window if plugin is HIDDEN because it has no view. Use the pres shell instead. bug 123059 r=ToddTaylor sr=beard